feat: book reviews
